--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,9 @@
 # These individuals contributed to the hbnb project in this repository 
 
+## Original Authors
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+
+##ALX Team
+Dagmawi Andualem
+Helina Abye
